feat: start add responsive - for tablet and mobile, work with header, add burger-menu

--- a/singolo.html
+++ b/singolo.html
@@ -11,6 +11,9 @@
   <header class="header">
     <div class="wrapper header__wrapper">
       <div class="site_name_wrapper">
+        <span class="hamburger">
+          <span class="hamburger-line"></span>
+        </span>
         <h1 class="site__name">SINGOLO <span class="star">*</span></h1>
       </div>
       <nav class="header__navigation">
