refactor: finish respons for desctop-tablet-mobile, start for portfolio-button - click-randomize

--- a/singolo.html
+++ b/singolo.html
@@ -80,154 +80,126 @@
           <p class="our-service__text">Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum. Duis mollis, non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
         </div>
         <div class="wrapper layout-2-span-3-column__wrapper" >
-                <div class="wrapper_layout">
-                  <div class="our-services__img">
-                    <img src="img/svg/items/services-item-1.svg" alt="pencil">
-                  </div>
-                  <div class="wrapper_layout__text">
-                    <h3 class="layout__name">Custom Design</h3>
-                    <p class="layout__description">Curabitur vestibulum eget mauris quis laoreet. Phasellus in quam laoreet, viverra lacus ut, ultrices velit.</p>
-                  </div>
-                </div>
-                <div class="wrapper_layout">
-                  <div class="our-services__img">
-                    <img src="img/svg/items/services-item-2.svg" alt="lamp">
-                  </div>
-                  <div class="wrapper_layout__text">
-                    <h3 class="layout__name">Inovative Ideas</h3>
-                    <p class="layout__description">Quisque luctus, quam eget molestie commodo, lacus purus cursus purus, nec rutrum tellus dolor id lorem.</p>
-                  </div>
-                </div>
-                <div class="wrapper_layout">
-                  <div class="our-services__img">
-                    <img src="img/svg/items/services-item-3.svg" alt="heart">
-                  </div>
-                  <div class="wrapper_layout__text">
-                    <h3 class="layout__name">Love Is The Answer</h3>
-                    <p class="layout__description">Nulla sed nunc et tortor luctus faucibus. Morbi at aliquet turpis, et consequat felis. Quisque condimentum.
-                    </p>
-                  </div>
-                </div>
-              <div class="wrapper_layout">
-                <div class="our-services__img">
-                  <img src="img/svg/items/services-item-4.svg" alt="s-phone">
-                </div>
-                <div class="wrapper_layout__text">
-                  <h3 class="layout__name">Responsive Layout</h3>
-                  <p class="layout__description">Sed porttitor placerat rhoncus. In at nunc tellus. Maecenas blandit nunc ligula. Praesent elit leo.</p>
-                </div>
-              </div>
-              <div class="wrapper_layout">
-                <div class="our-services__img">
-                  <img src="img/svg/items/services-item-5.svg" alt="answer">
-                </div>
-                <div class="wrapper_layout__text">
-                  <h3 class="layout__name">24 / 7 Support</h3>
-                  <p class="layout__description">Vivamus vel quam lacinia, tincidunt dui non, vehicula nisi. Nulla a sem erat. Pellentesque egestas venenatis lorem .</p>
-                </div>
-              </div>
-              <div class="wrapper_layout">
-                <div class="our-services__img">
-                  <img src="img/svg/items/services-item-6.svg" alt="star">
-                </div>
-                <div class="wrapper_layout__text">
-                  <h3 class="layout__name">Feel Like A Star</h3>
-                  <p class="layout__description">Quisque hendrerit purus dapibus, ornare nibh vitae, viverra nibh. Fusce vitae aliquam tellus.</p>
-                </div>
-              </div>
-
+          <div class="wrapper_layout">
+            <div class="our-services__img">
+              <img src="img/svg/items/services-item-1.svg" alt="pencil">
+            </div>
+            <div class="wrapper_layout__text">
+              <h3 class="layout__name">Custom Design</h3>
+              <p class="layout__description">Curabitur vestibulum eget mauris quis laoreet. Phasellus in quam laoreet, viverra lacus ut, ultrices velit.</p>
+            </div>
+          </div>
+          <div class="wrapper_layout">
+            <div class="our-services__img">
+              <img src="img/svg/items/services-item-2.svg" alt="lamp">
+            </div>
+            <div class="wrapper_layout__text">
+              <h3 class="layout__name">Inovative Ideas</h3>
+              <p class="layout__description">Quisque luctus, quam eget molestie commodo, lacus purus cursus purus, nec rutrum tellus dolor id lorem.</p>
+            </div>
+          </div>
+          <div class="wrapper_layout">
+            <div class="our-services__img">
+              <img src="img/svg/items/services-item-3.svg" alt="heart">
+            </div>
+            <div class="wrapper_layout__text">
+              <h3 class="layout__name">Love Is The Answer</h3>
+              <p class="layout__description">Nulla sed nunc et tortor luctus faucibus. Morbi at aliquet turpis, et consequat felis. Quisque condimentum.
+              </p>
+            </div>
+          </div>
+          <div class="wrapper_layout">
+            <div class="our-services__img">
+              <img src="img/svg/items/services-item-4.svg" alt="s-phone">
+            </div>
+            <div class="wrapper_layout__text">
+              <h3 class="layout__name">Responsive Layout</h3>
+              <p class="layout__description">Sed porttitor placerat rhoncus. In at nunc tellus. Maecenas blandit nunc ligula. Praesent elit leo.</p>
+            </div>
+          </div>
+          <div class="wrapper_layout">
+            <div class="our-services__img">
+              <img src="img/svg/items/services-item-5.svg" alt="answer">
+            </div>
+            <div class="wrapper_layout__text">
+              <h3 class="layout__name">24 / 7 Support</h3>
+              <p class="layout__description">Vivamus vel quam lacinia, tincidunt dui non, vehicula nisi. Nulla a sem erat. Pellentesque egestas venenatis lorem .</p>
+            </div>
+          </div>
+          <div class="wrapper_layout">
+            <div class="our-services__img">
+              <img src="img/svg/items/services-item-6.svg" alt="star">
+            </div>
+            <div class="wrapper_layout__text">
+              <h3 class="layout__name">Feel Like A Star</h3>
+              <p class="layout__description">Quisque hendrerit purus dapibus, ornare nibh vitae, viverra nibh. Fusce vitae aliquam tellus.</p>
+            </div>
+          </div>
         </div>
       </div>
     </div>
   </section>
   <section class="menu-link" id="portfolio">
-    <div class="portfolio">
-      <div class="wrapper" id="portfolio-1">
-        <h2 class="portfolio__title">Portfolio</h2>
-        <p class="portfolio__text">Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.</p>
-        <div class="button_portfolio" id="PORTFOLIO">
-          <span class="button_portfolio__item">
-            <button class="button_borderd button_borderd_active">All</button>
-          </span>
-          <span class="button_portfolio__item">
-            <button class="button_borderd">Web Design</button>
-          </span>
-          <span class="button_portfolio__item">
-            <button class="button_borderd">Graphic Design</button>
-          </span>
-          <span class="button_portfolio__item">
-            <button class="button_borderd">Artwork</button>
-          </span>
+    <div class="wrapper portfolio">
+      <h2 class="portfolio__title">Portfolio</h2>
+      <p class="portfolio__text">Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.</p>
+      <div class="button_portfolio" id="portfolio-buttons">
+        <span class="button_portfolio__item">
+          <button class="button_borderd button_borderd_active">All</button>
+        </span>
+        <span class="button_portfolio__item">
+          <button class="button_borderd">Web Design</button>
+        </span>
+        <span class="button_portfolio__item">
+          <button class="button_borderd">Graphic Design</button>
+        </span>
+        <span class="button_portfolio__item">
+          <button class="button_borderd">Artwork</button>
+        </span>
+      </div>
+      <div class="portfolio_images" id="shufle">
+        <div class="image">
+          <img class="image" src="img/portfolio/portfolio-1.png" alt="boat">
         </div>
-        <div class="portfolio_images__wrapper">
-            <ul class="portfolio_images">
-              <li class="portfolio_images__item">
-                <div class="image">
-                  <img src="img/portfolio/portfolio-1.png" alt="boat">
-                </div>
-              </li>
-              <li class="portfolio_images__item">
-                <div class="image">
-                  <img src="img/portfolio/portfolio-2.png" alt="happyness">
-                </div>
-              </li>
-              <li class="portfolio_images__item">
-                <div class="image">
-                  <img src="img/portfolio/portfolio-3.png" alt="space">
-                </div>
-              </li>
-              <li class="portfolio_images__item">
-                <div class="image">
-                  <img src="img/portfolio/portfolio-4.png" alt="robot">
-                </div>
-              </li>
-              <li class="portfolio_images__item">
-                <div class="image">
-                  <img src="img/portfolio/portfolio-5.png" alt="abstract-animals">
-                </div>
-              </li>
-              <li class="portfolio_images__item">
-                <div class="image">
-                  <img src="img/portfolio/portfolio-6.png" alt="codding">
-                </div>
-              </li>
-              <li class="portfolio_images__item">
-                <div class="image">
-                  <img src="img/portfolio/portfolio-7.png" alt="ufo">
-                </div>
-              </li>
-              <li class="portfolio_images__item">
-                <div class="image">
-                  <img src="img/portfolio/portfolio-8.png" alt="chickens">
-                </div>
-              </li>
-              <li class="portfolio_images__item">
-                <div class="image">
-                  <img src="img/portfolio/portfolio-9.png" alt="devil">
-                </div>
-              </li>
-              <li class="portfolio_images__item">
-                <div class="image"></div>
-                <img src="img/portfolio/portfolio-10.png" alt="lettering">
-              </li>
-              <li class="portfolio_images__item">
-                <div class="image">
-                  <img src="img/portfolio/portfolio-11.png" alt="monster">
-                </div>
-              </li>
-              <li class="portfolio_images__item">
-                <div class="image">
-                  <img src="img/portfolio/portfolio-12.png" alt="sadness">
-                </div>
-              </li>
-          </ul>
+        <div class="image">
+          <img src="img/portfolio/portfolio-2.png" alt="happyness">
+        </div>
+        <div class="image">
+          <img src="img/portfolio/portfolio-3.png" alt="space">
+        </div>
+        <div class="image">
+          <img src="img/portfolio/portfolio-4.png" alt="robot">
+        </div>
+        <div class="image">
+          <img src="img/portfolio/portfolio-5.png" alt="abstr-animals">
+        </div>
+        <div class="image">
+          <img src="img/portfolio/portfolio-6.png" alt="codding">
+        </div>
+        <div class="image">
+          <img src="img/portfolio/portfolio-7.png" alt="ufo">
+        </div>
+        <div class="image">
+          <img src="img/portfolio/portfolio-8.png" alt="chickens">
+        </div>
+        <div class="image">
+          <img src="img/portfolio/portfolio-9.png" alt="devil">
+        </div>
+        <div class="image">
+          <img src="img/portfolio/portfolio-10.png" alt="lettering">
+        </div>
+        <div class="image">
+          <img src="img/portfolio/portfolio-11.png" alt="monster">
+        </div>
+        <div class="image">
+          <img src="img/portfolio/portfolio-12.png" alt="sadness">
         </div>
       </div>
     </div>
   </section>
   <footer class="footer">
         <div class="wrapper footer__wrapper">
-          <div>
+          <div class="copyright">
             <p>© Copyright 2013</p>
           </div>
           <div class="social" >
