feat: change slider-direction (like in example), add hide for media-mobile (and fix overflow-in portfolio -desctop and -tablet), fix slide-top-shift (red line in top of blue slide)

--- a/singolo.html
+++ b/singolo.html
@@ -158,42 +158,23 @@
         </span>
       </div>
       <div class="portfolio_images" id="shufle">
-        <div class="image">
-          <img class="image" src="img/portfolio/portfolio-1.png" alt="boat">
-        </div>
-        <div class="image">
-          <img src="img/portfolio/portfolio-2.png" alt="happyness">
-        </div>
-        <div class="image">
-          <img src="img/portfolio/portfolio-3.png" alt="space">
-        </div>
-        <div class="image">
-          <img src="img/portfolio/portfolio-4.png" alt="robot">
-        </div>
-        <div class="image">
-          <img src="img/portfolio/portfolio-5.png" alt="abstr-animals">
-        </div>
-        <div class="image">
-          <img src="img/portfolio/portfolio-6.png" alt="codding">
-        </div>
-        <div class="image">
-          <img src="img/portfolio/portfolio-7.png" alt="ufo">
-        </div>
-        <div class="image">
-          <img src="img/portfolio/portfolio-8.png" alt="chickens">
-        </div>
-        <div class="image">
-          <img src="img/portfolio/portfolio-9.png" alt="devil">
-        </div>
-        <div class="image">
-          <img src="img/portfolio/portfolio-10.png" alt="lettering">
-        </div>
-        <div class="image">
-          <img src="img/portfolio/portfolio-11.png" alt="monster">
-        </div>
-        <div class="image">
-          <img src="img/portfolio/portfolio-12.png" alt="sadness">
-        </div>
+        <img class="image" src="img/portfolio/portfolio-1.png" alt="boat">
+        <img class="image"src="img/portfolio/portfolio-2.png" alt="happyness">
+        <img  class="image" src="img/portfolio/portfolio-3.png" alt="space">
+        <img class="image" src="img/portfolio/portfolio-4.png" alt="robot">
+        <img class="image" src="img/portfolio/portfolio-5.png" alt="abstr-animals">
+        <img class="image" src="img/portfolio/portfolio-6.png" alt="codding">
+        <img class="image" src="img/portfolio/portfolio-7.png" alt="ufo">
+        <img class="image" src="img/portfolio/portfolio-8.png" alt="chickens">
+        <img class="image" src="img/portfolio/portfolio-9.png" alt="devil">
+        <img class="image" src="img/portfolio/portfolio-10.png" alt="lettering">
+        <img class="image" src="img/portfolio/portfolio-11.png" alt="monster">
+        <img class="image" src="img/portfolio/portfolio-12.png" alt="sadness">
+        <img class="image" src="img/portfolio/portfolio-11.png" alt="monster">
+        <img class="image" src="img/portfolio/portfolio-12.png" alt="sadness"> <img class="image" src="img/portfolio/portfolio-11.png" alt="monster">
+        <img class="image" src="img/portfolio/portfolio-12.png" alt="sadness"> <img class="image" src="img/portfolio/portfolio-11.png" alt="monster">
+        <img class="image" src="img/portfolio/portfolio-12.png" alt="sadness"> <img class="image" src="img/portfolio/portfolio-11.png" alt="monster">
+        <img class="image" src="img/portfolio/portfolio-12.png" alt="sadness">
       </div>
     </div>
   </section>
