feat: add-background-change when slider-change, change padding in burger-click menu

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       </nav>
     </div>
   </header>
-  <section  class="menu-link" id="home">
+  <section  class="menu-link slider_bckGr" id="home">
     <div class="slider">
       <div class="slider-line">
         <object
@@ -181,22 +181,22 @@
           <div class="social" >
             <ul class="ico-networks">
               <li class="ico-networks__link">
-                <a href="#">
+                <a href="https://www.facebook.com/" target="_blank">
                   <img class="svg" src="img/svg/social icons/ico-facebook.svg" alt="facebook">
                 </a>
               </li>
               <li class="ico-networks__link">
-                <a href="#">
+                <a href="https://www.google.com/" target="_blank">
                   <img class="svg" src="img/svg/social icons/ico-google-plus.svg" alt="google">
                 </a>
               </li>
               <li class="ico-networks__link">
-                <a href="#">
+                <a href="https://www.linkedin.com/" target="_blank">
                   <img class="svg" src="img/svg/social icons/ico-linkedin.svg" alt="linkedin">
                 </a>
               </li>
               <li class="ico-networks__link">
-                <a href="#">
+                <a href="https://www.twitter.com/" target="_blank">
                   <img class="svg" src="img/svg/social icons/ico-twitter.svg" alt="twitter">
                 </a>
               </li>
