--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
             <a href="#portfolio">PORTFOLIO</a>
           </li>
           <li class="navigation__link">
-            <a href="#about">ABOUT</a>
+            <a href="#">ABOUT</a>
           </li>
           <li class="navigation__link">
-            <a href="#contact">CONTACT</a>
+            <a href="#">CONTACT</a>
           </li>
         </ul>
       </nav>
