feat: change slider-images to png, do portfolio-btn work correctly, change arrow in slider

--- a/index.html
+++ b/index.html
@@ -39,30 +39,14 @@
   <section  class="menu-link slider_bckGr" id="home">
     <div class="slider">
       <div class="slider-line">
-        <object
-          type="image/svg+xml"
-          data="picture.svg">
-          <img id="last_clone" class="slide"
-            src="img/slide-2/Slide-2.svg">
-        </object>
-        <object
-          type="image/svg+xml"
-          data="picture.svg">
-          <img class="slide"
-            src="img/slide-1/Slide-1.svg">
-        </object>
-        <object
-          type="image/svg+xml"
-          data="picture.svg">
-          <img class="slide"
-            src="img/slide-2/Slide-2.svg">
-        </object>
-        <object
-          type="image/svg+xml"
-          data="picture.svg">
-          <img  id="first_clone"  class="slide"
-            src="img/slide-1/Slide-1.svg">
-        </object>
+        <img id="last_clone" class="slide"
+            src="img/slide-2/Slide-2.png">
+        <img class="slide"
+            src="img/slide-1/Slide-1.png">
+        <img class="slide"
+            src="img/slide-2/Slide-2.png">
+        <img  id="first_clone"  class="slide"
+            src="img/slide-1/Slide-1.png">
       </div>
       <div class="btn-container">
         <div class="btn slider_left" id="left">
